--- a/style.css
+++ b/style.css
@@ -5,3 +5,12 @@ body{
     align-items: center;
     color: white;
 }
+#result{
+    background-color: green;
+    width: 300px;
+    padding: 20px;
+    border-radius: 10px;
+    color: yellow;
+    margin: auto;
+    margin-top: 100px;
+}
